--- a/predictive_maint/msgs/templates/occurrences.html
+++ b/predictive_maint/msgs/templates/occurrences.html
@@ -41,7 +41,23 @@ Occurences
 <h4 id='details'>Occurences details</h4>
 
 <div id='msg_details_div'>
-    <table id="mmsg_details_datatable" class="table table-light table-bordered"></table>
+    <table id="mmsg_details_datatable" class="table table-light table-bordered">
+        <thead>
+            
+            <th>MMSG</th>
+            <th>FDE Code</th>
+            <th>Date</th>
+            <th>Equipment number</th>
+            <th>Departing</th>
+            <th>Arriving</th>
+            <th>Flight</th>
+            <th>Status</th>
+            <th>Defect ref.</th> 
+            
+            
+        </thead>
+        <tbody></tbody>
+    </table>
     <h4>History data</h4>
     <table id="mmsg_details_history_datatable" class="table table-light"></table>
 </div>
@@ -69,8 +85,54 @@ Occurences
                 fromDate: fromDate,
                 toDate: toDate
             }).done(function (data) {
-                alert(data)
-            });
+                const text = 'Details For ' + tail + ', chapter ' + ataChapter
+                    document.getElementById('details').innerHTML = text
+
+                    // document.getElementById('msg_details_div').innerHTML = data
+
+                    var data_to_msg_table = JSON.parse(data)
+                    //var data_to_msg_history_table = JSON.parse(data[1])
+
+
+                    mmsg_table = $('#mmsg_details_datatable').DataTable({
+                        "data": data_to_msg_table,
+                        destroy: true,
+                        "paging": false,
+                        rowGroup: {
+                            dataSrc: [0, 3],
+                            startRender: function (rows, group) {
+                                //  var collapsed = !!collapsedGroups[group];
+                                var collapsed = true;
+                                console.log(collapsed);
+                                console.log('in the table renderer');
+                                rows.nodes().each(function (r) {
+                                    r.style.display = collapsed ? 'none' : '';
+                                });
+
+
+                                // Add category name to the <tr>. NOTE: Hardcoded colspan
+                                return $('<tr/>')
+                                    .append('<td colspan="2">' + group + ' (' + rows.count() + ')</td>')
+                                    .attr('data-name', group)
+                                    .toggleClass('collapsed', collapsed);
+                            },
+                        },
+
+                        "columns": [
+                            { data: "mmsg_code" },
+                            { data: "fde__fde_code" },
+                            { data: "msg_date_time" },
+                            { data: "equip_number" },
+                            { data: "fault_report__departing" },
+                            { data: "fault_report__arriving" },
+                            { data: "fault_report__flight" },
+                            { data: "defect_status" },
+                            { data: "defect_ref" },
+                        ]
+                    });
+            }); 
+            
+       
        }); 
 
         $("#3dInput").click(function () {
@@ -123,4 +185,6 @@ Occurences
 
 
 </script>
+
+
 {% endblock %}
