--- a/predictive_maint/msgs/templates/occurrences_details.html
+++ b/predictive_maint/msgs/templates/occurrences_details.html
@@ -1,6 +1,22 @@
 {% extends 'base.html' %}
-
 {% block content %}
-hello
+    {% for message in object_list %}
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header">
+                    <a class="card-link"
+                       data-bs-toggle="collapse"
+                       data-bs-target="#collapse{{ message.id }}"
+                       href="#collapse{{ message.id }}">{{ message }}</a>
+                </div>
+                <div id="collapse{{ message.id }}"
+                     class="collapse"
+                     data-parent="#accordion">
+                    <div class="card-body">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock content %}
-
