--- a/predictive_maint/templates/base.html
+++ b/predictive_maint/templates/base.html
@@ -19,7 +19,10 @@
                             <a class="nav-link" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'occurrences' %}">Maintenance Messages</a>
+                            <a class="nav-link" href="{% url 'occurrences' %}">Maintenance Messages</a>  
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'defect_list' %}">Defects</a>  
                         </li>
                     </ul>
                 </div>
