--- a/predictive_maint/home/templates/home.html
+++ b/predictive_maint/home/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
     <main role="main">
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron">
@@ -24,13 +25,9 @@
                     </p>
                 </div>
                 <div class="col-md-4">
-                    <h2>Heading</h2>
-                    <p>
-                        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-                    </p>
-                    <p>
-                        <a class="btn btn-secondary" href="#" role="button">View details &raquo;</a>
-                    </p>
+                    <img src="{% static 'gif/carey.gif' %}" alt="this slowpoke moves" alt="404 image"/>
+                   
+                    
                 </div>
                 <div class="col-md-4">
                     <h2>Heading</h2>
