--- a/predictive_maint/task_cards/templates/task_card_detail.html
+++ b/predictive_maint/task_cards/templates/task_card_detail.html
@@ -1,7 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
     {% load static %}
-    <h3>Task card # {{ object.number }}</h3>
+    <div class="row mt-3">
+        <div class="col-8">
+
+            <h3>Task card # {{ object.number }}</h3>
+        </div>
+        <div class="col-4">
+            <a href="{% url 'task_card_update' object.id %}"
+                                   type="button"
+                                   class="btn btn-info"
+                                   align="right">Update Task card</a>
+        </div>
+    </div>
     <div>
         <ul>
             <li>ATA Chapter: {{ object.ata_chapter }}</li>
