--- a/predictive_maint/task_cards/templates/task_card_list.html
+++ b/predictive_maint/task_cards/templates/task_card_list.html
@@ -1,7 +1,66 @@
 {% extends 'base.html' %}
 {% block content %}
+    <h3 align="center">Task card list</h3>
+    <div align="right">
+        <a href="{% url 'task_card_create' %}" class="btn btn-primary mb-3">Create new task card</a>
+    </div>
     {% for task_card in object_list %}
-     
-    <a href="{% url 'task_card_details' task_card.id %}">{{ task_card }}</a>
+        <div id="accordion">
+            <div class="card">
+                <div class="card-header">
+                    <div class="row">
+                        <div class="col-10">
+                            <a class="card-link"
+                               data-bs-toggle="collapse"
+                               data-bs-target="#collapse{{ task_card.id }}"
+                               href="#collapse{{ task_card.id }}">{{ task_card }}</a>
+                        </div>
+                        <div class="col-2">
+                            {% if task_card.defect %}
+                                {% if task_card.defect.status.condition == "Pending" %}
+                                    <span class="badge bg-warning text-wrap" align="right">Defect {{ task_card.defect.status.condition }}</span>
+                                {% endif %}
+                                {% if task_card.defect.status.condition == "Open" %}
+                                    <span class="badge bg-danger text-wrap" align="right">Defect {{ task_card.defect.status.condition }}</span>
+                                {% endif %}
+                                {% if task_card.defect.status.condition == "Closed" %}
+                                    <span class="badge bg-info text-wrap" align="right">Defect {{ task_card.defect.status.condition }}</span>
+                                {% endif %}
+                            {% else %}
+                                <span class="badge bg-info text-wrap" align="right">No defect</span> 
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <div id="collapse{{ task_card.id }}"
+                     class="collapse"
+                     data-parent="#accordion">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-8">
+                                <ul>
+                                    <li>Description: {{ task_card.description }}</li>
+                                    <li>ATA: {{ task_card.ata_chapter }}</li>
+                                    <li>Issue date: {{ task_card.issued_date | date:"d M Y, H:i" }}</li>
+                                    <li>Plane type: {{ task_card.plane_type }}</li>
+                                    
+                                </ul>
+                            </div>
+                            <div class="col-4">
+                                <ul>
+                                    <li>Defect status: {{ task_card.defect.status.condition }}</li>
+                                    <li>Defect ref: {{ task_card.defect.reference }}</li>
+                                    <li>Last action: {{ task_card.defect.action }}</li>
+                                </ul>
+                                <a href="{% url 'task_card_details' task_card.id %}"
+                                   type="button"
+                                   class="btn btn-info"
+                                   align="right">Details</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     {% endfor %}
 {% endblock content %}
